--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
         "docker": "docker build -t eeelenbaas/openapi-typescript-codegen ."
     },
     "dependencies": {
-        "@apidevtools/json-schema-ref-parser": "^11.5.4",
+        "@apidevtools/json-schema-ref-parser": "11.2.1",
         "camelcase": "^6.3.0",
         "commander": "^12.0.0",
         "fs-extra": "^11.2.0",
